--- a/assets/score.css
+++ b/assets/score.css
@@ -1,20 +1,24 @@
-#top {
+.container {
   width: 100%;
-  position: sticky;
-  top: 0;
-  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
 }
-#top img {
-  width: 100%;
-  object-fit: cover;
+#top {
+  position: sticky;
+  top: 0;
+  left: 0;
 }
-#top div {
+.scroll-trigger {
   width: 100%;
   height: 5rem;
+  background-color: #577aef;
+  opacity: 0;
+  transition: opacity 1s;
+}
+.scroll-trigger:hover {
+  opacity: 0.8;
 }
 #bottom {
   width: 100%;
@@ -23,14 +27,7 @@
   bottom: 0;
   left: 0;
 }
-#scores {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-}
-#scores img {
+img {
   width: 100%;
   object-fit: cover;
 }
